clusters/home/container-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: container-registry
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: container-registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: container-registry
    spec:
      containers:
      - name: registry
        image: registry:2
        resources:
          requests:
            cpu: "150m"
            memory: "128Mi"
          limits:
            cpu: "150m"
            memory: "128Mi"
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: registry-data
          mountPath: /var/lib/registry
      volumes:
      - name: registry-data
        nfs:
          server: 10.0.0.3 # TODO MAKE DNS?
          path: /data/container-registry
