clusters/home/container-registry/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-registry
  namespace: container-registry
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: container-registry
  ports:
    - port: 5000
      targetPort: 5000
