clusters/home/container-registry/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-registry
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: container-registry
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: container-registry
spec:
  hostnames:
  - container-registry.k8s.home.blrobinson.uk
  parentRefs:
  - name: gateway-ingress
    namespace: ingress
  rules:
  - backendRefs:
    - name: container-registry
      port: 5000
